landing page done

--- a/src/styles/blocks/slick.sass
+++ b/src/styles/blocks/slick.sass
@@ -174,7 +174,7 @@
         top: 50%
         transform: translateY(-50%)
         +t
-            top: auto
+            top: 100%
             bottom: 0
             transform: translateY(0)
     .slick-prev
@@ -207,7 +207,7 @@
         height: auto
         margin: 0 16px
         opacity: 0
-        transition: opacity .4s
+        transition: opacity .9s
         +m
             margin: 0 8px
         &.slick-active
