--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -1,7 +1,9 @@
 .image{
-    height: 500px;
+    height: 300px;
     width: 100%;
     cursor: pointer;
+    object-fit: cover;
+    border-radius: 20px;
 }
 .pointer{
     cursor: pointer;
